2007-09-13  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* runtime.cc, setup.cc: Rewritten.

	* Makefile.am, music/setup.hh, music/runtime.hh: New files.

	* music.hh: Rewritten to include header files under the music
	directory.

2007-08-17  orjan  <orjan@nada.kth.se>

	* music.hh (MUSIC): Add binding routines

2007-08-17  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* Bong!
