@@ -7,6 +7,8 @@ lib_LTLIBRARIES = libmusic.la
 libmusic_la_SOURCES = \
 	runtime.cc music/runtime.hh \
 	setup.cc music/setup.hh
+	linearmap.cc music/linearmap.hh
+	arraydata.cc music/arraydata.hh
 libmusic_la_HEADERS = music.hh
 libmusic_la_CXXFLAGS = @MPI_CXXFLAGS@
 libmusic_la_LDFLAGS = -version-info 0:0 -export-dynamic
