@@ -2,10 +2,14 @@
 
 ACLOCAL = $(top_srcdir)/aclocal.sh
 
-bin_PROGRAMS = application1
+bin_PROGRAMS = application1 wavegenerator
 
 application1_SOURCES = application1.cc
 application1_CXXFLAGS = -I$(top_srcdir)/src @MPI_CXXFLAGS@
 application1_LDADD = $(top_builddir)/src/libmusic.la @MPI_LDFLAGS@
+
+wavegenerator_SOURCES = wavegenerator.cc
+wavegenerator_CXXFLAGS = -I$(top_srcdir)/src @MPI_CXXFLAGS@
+wavegenerator_LDADD = $(top_builddir)/src/libmusic.la @MPI_LDFLAGS@
 
 MKDEP = gcc -M $(DEFS) $(INCLUDES) $(CPPFLAGS) $(CFLAGS)
